# android_java_cc_libs_issue

./: .bazelrc  .bazelversion  .gitignore  BUILD  MODULE.bazel  README.md
