module(
  name = "link_params"
)

bazel_dep(name = "rules_android", version = "0.5.1")
git_override(
  module_name = "rules_android",
  commit = "222ddb353b6beb9404a2686b2047d3279bfe829e",
  remote = "https://github.com/ted-xie/rules_android",
)

bazel_dep(name = "rules_java", version = "8.6.0")
bazel_dep(name = "rules_cc", version = "0.0.17")

### Android toolchain setup ###
remote_android_extensions = use_extension(
    "@rules_android//bzlmod_extensions:android_extensions.bzl",
    "remote_android_tools_extensions")
use_repo(remote_android_extensions, "android_gmaven_r8", "android_tools")

android_sdk_repository_extension = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")
use_repo(android_sdk_repository_extension, "androidsdk")

register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")
